--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goke",
   "displayName": "Goke",
   "description": "Run Goke tasks easily from within VS Code.",
+  "license": "MIT",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.72.0"
